--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   </head>
   
   <body>
-    Hello there, 👋 Awsome person!
+    <h2>Hello there, 👋 Awsome person!<h2>
+      
+      <h1> This is not at all small</h1>
+      <h2> But I am Small</h2>
+      <h3> No I am small</h3>
+      <h4> No I am smaller</h4>
+      <h5> See me! I am smaller</h5>
+      <h6> Hey you guys didn't see me... So I'm the Smallest</h6>
   </body>
   
 </html>
