--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   
   <body>
     <h2>Hello there, 👋 Awsome person!<h2>
-      
+    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <img src="https://avatars.githubusercontent.com/u/74810128?v=4">  
       <h1> This is not at all small</h1>
       <h2> But I am Small</h2>
       <h3> No I am small</h3>
