--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-    <h1>Hello there<h1>
+    <h1>Hello there</h1>
 
       <img src="https://avatars.githubusercontent.com/u/74810128?v=4">  
       
