--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul><li><h5> See me! I am smaller</h5></li></ul>
       <ul><li><h6> Hey you guys didn't see me... So I'm the Smallest</h6></ul>
 
-      <li><a href="https://youtu.be/dQw4w9WgXcQ">I think you should not click here!</a></li>
+      <a href="https://youtu.be/dQw4w9WgXcQ">I think you should not click here!</a>
   </body>
   
 </html>
