--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <img src="https://avatars.githubusercontent.com/u/74810128?v=4">  
       
       <ul><li><h1> This is not at all small</h1></li></ul>
-      <ul><li><h2> But I am Small</h2></li></ul>
-      <ul><li><h3> No I am small</h3></li></ul>
-      <ul><li><h4> No I am smaller</h4></li></ul>
-      <ul><li><h5> See me! I am smaller</h5></li></ul>
-      <ul><li><h6> Hey you guys didn't see me... So I'm the Smallest</h6></ul>
+      <h2> But I am Small</h2>
+      <h3> No I am small</h3>
+      <h4> No I am smaller</h4>
+      <h5> See me! I am smaller</h5>
+      <h6> Hey you guys didn't see me... So I'm the Smallest</h6>
       
-      <img src="https://octodex.github.com/images/v
+      <img src="https://octodex.github.com/images/v">
       <li><a href="https://youtu.be/dQw4w9WgXcQ">I think you should not click here!</a></li>
   </body>
   
