--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
       <ul><li><h3> No I am small</h3></li></ul>
       <ul><li><h4> No I am smaller</h4></li></ul>
       <ul><li><h5> See me! I am smaller</h5></li></ul>
-      <ul><li><h6> Hey you guys didn't see me... So I'm the Smallest</h6></ul>
-      
-      <img src="https://octodex.github.com/images/vinyltocat.png">
+      <ul><li><h6> Hey you guys didn't see me... So I'm the Smallest/n/n/n</h6></ul>
+   
       <li><a url="https://youtu.be/dQw4w9WgXcQ">I think you should not click here!</a></li>
+    
+      <ul><li><h6>Desclaimer: Removed Styles due to Some internal errors</h6></li></ul>
   </body>
   
 </html>
